--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "About Me"
+  subheading: "I am Peixuan Li(李培玄), a Ph.D from the University of Chinese Academy of Sciences. I am now working in the autonomous driving industry and am currently interested in Autonomous Driving (AD), 3D Computer Vision, Large Language Model (LLM) and Vision Languange Model (VLM)."
   banner: "Your image url"
